<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Login">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

            <TextView
                    android:id="@+id/welcome_tv"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center"
                    android:text="@string/welcome_title"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread"
                    app:layout_constraintBottom_toTopOf="@+id/details_tv" />

            <TextView
                    android:id="@+id/details_tv"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/details_login"
                    android:textColor="@color/font_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintBottom_toTopOf="@+id/email_til" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintBottom_toTopOf="@+id/pass_ti">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_ti"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_til"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintBottom_toTopOf="@+id/sign_in_btn">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/recover_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/recover_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pass_ti" />

            <Button
                    android:id="@+id/sign_in_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pass_ti"
                    app:layout_constraintHorizontal_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>