<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UploadPicture" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/upload_tv"
                app:layout_constraintGuide_begin="100dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="718dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_btn" />

            <TextView
                android:id="@+id/upload_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_txt"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/profile_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline2" />



            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/prof_security_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:cardElevation="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_tv">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_desc"
                    tools:ignore="ImageContrastCheck"
                    android:src="@drawable/profile"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/prof_security_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_txt"
                app:layout_constraintBottom_toTopOf="@+id/profile_btn"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_card" />

            <Button
                android:id="@+id/profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_btn"
                android:textColor="#0D47A1"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prof_security_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>