<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ke.example.dishee.Congrats">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/congrats_img"
                app:layout_constraintGuide_begin="187dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="588dp"
                app:layout_constraintTop_toBottomOf="@+id/ready_tv" />

            <ImageView
                android:id="@+id/congrats_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/congrats"
                app:layout_constraintBottom_toTopOf="@+id/congrats_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline3" />

            <TextView
                android:id="@+id/congrats_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/congrats"
                app:layout_constraintBottom_toTopOf="@+id/ready_tv"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/theme_green"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/congrats_img" />

            <TextView
                android:id="@+id/ready_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prof_ready"
                android:gravity="center"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/congrats_tv" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>